# ecommerce-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/flows/: dag.py
src/jobs/: ingest.py  transform.py
src/utils/: required.py
